Fix spacing after slider div

--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,3 +1,7 @@
+.portfolio {
+  padding-bottom: calc(5vh + 4rem);
+}
+
 .portfolio, .portfolio * {
   background-color: var(--customBlack);
 }
